--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,14 @@ services:
       dockerfile: docker/php/Dockerfile
     volumes:
       - .:/app/
+  db:
+    build:
+      context: .
+      dockerfile: docker/db/Dockerfile
+    ports:
+      - "5433:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data/ 
+
+volumes:
+  pgdata:
